# dischat

./: .dockerignore  .env.example  .env.live-e2e.example  .gitignore  Dockerfile  Justfile  README.md  config.example.yaml  config.live-e2e.example.yaml  docker-compose.live-e2e.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  container.yml
docs/: architecture.md  configuration.md  discourse-setup.md  docker.md  getting-started.md  index.md  live-e2e-testing.md  matrix-setup.md  operations.md  pairing-flow.md  relay-accounts.md  room-links.md  security.md  subscriptions.md  testing.md  troubleshooting.md
src/dischat/: bridge.py  config.py  i18n.py  main.py  runtime.py  service.py
src/dischat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dischat/commands/: handlers.py  parser.py
src/dischat/discourse/: __init__.py  client.py  formatting.py  models.py  polling.py  router.py  sync.py
src/dischat/jobs/: __init__.py  queue.py  workers.py
src/dischat/matrix/: __init__.py  client.py  events.py  formatting.py  handler.py  (+2 more)
tests/: conftest.py
tests/e2e_live/: test_live_bridge.py  test_live_placeholder.py
tests/e2e_mocked/: test_command_flows.py
tests/integration/: test_repositories.py
tests/unit/: test_bridge.py  test_commands.py  test_discourse_formatting.py  test_discourse_polling.py  test_i18n.py  test_jobs.py  test_live_safety.py  test_main_runtime.py  test_matrix_formatting.py  test_pairing.py  test_permissions.py  test_routing_runtime.py  test_service.py  test_subscriptions.py
(+18 files in other folders)
